feat: adding category features to dashboard
